--- a/examples/clm_emotiondetection.html
+++ b/examples/clm_emotiondetection.html
@@ -133,8 +133,8 @@
 		<script src="./js/emotion_classifier.js"></script>
 		<script src="./js/emotionmodel.js"></script>
 		<div id="content">
-			<h2>Emotion detection example</h2>
-			<p>This a test of emotion detection based on parameter output from <em>clmtrackr</em>.</p>
+			<h2>Please Look at Your Camera</h2>
+			<p>How does your room <em>smell</em>?</p>
 			<div id="container">
 				<video id="videoel" width="400" height="300" preload="auto" loop>
 				</video>
