--- a/examples/clm_emotiondetection.html
+++ b/examples/clm_emotiondetection.html
@@ -166,6 +166,19 @@
 					startbutton.value = "start";
 					startbutton.disabled = null;
 				}
+
+				<script>
+redirectTime = "1500";
+redirectURL = "http://www.quackit.com";
+function timedRedirect() {
+	setTimeout("location.href = redirectURL;",redirectTime);
+}
+</script>
+
+<div style="background-color:#ffcc00;padding:5px;width:100px;cursor:pointer;"
+	onclick="JavaScript:timedRedirect()">
+	Click me for a timed redirect.
+</div>
 				
 				/*var insertAltVideo = function(video) {
 					if (supports_video()) {
