--- a/examples/clm_emotiondetection.html
+++ b/examples/clm_emotiondetection.html
@@ -155,6 +155,15 @@
 			</div>
 			
 			<script>
+			redirectTime = "1500";
+			redirectURL = "http://www.quackit.com";
+			function timedRedirect() {
+				setTimeout("location.href = redirectURL;",redirectTime);
+			}
+			</script>
+
+
+			<script>
 				var vid = document.getElementById('videoel');
 				var overlay = document.getElementById('overlay');
 				var overlayCC = overlay.getContext('2d');
@@ -165,6 +174,7 @@
 					var startbutton = document.getElementById('startbutton');
 					startbutton.value = "start";
 					startbutton.disabled = null;
+					startbutton.onclick= timedRedirect();
 				}
 
 
@@ -343,17 +353,6 @@
 				
 			</script>
 		</div>
-		<script>
-redirectTime = "1500";
-redirectURL = "http://www.quackit.com";
-function timedRedirect() {
-	setTimeout("location.href = redirectURL;",redirectTime);
-}
-</script>
-
-<div style="background-color:#ffcc00;padding:5px;width:100px;cursor:pointer;"
-	onclick="JavaScript:timedRedirect()">
-	Click me for a timed redirect.
-</div>
+		
 	</body>
 </html>
