--- a/examples/clm_emotiondetection.html
+++ b/examples/clm_emotiondetection.html
@@ -174,7 +174,7 @@
 					var startbutton = document.getElementById('startbutton');
 					startbutton.value = "go";
 					startbutton.disabled = null;
-					startbutton.onclick= enablestart() {timedRedirect()};
+					startbutton.onclick= timedRedirect();
 				}
 
 
