--- a/examples/clm_emotiondetection.html
+++ b/examples/clm_emotiondetection.html
@@ -151,7 +151,7 @@
 				<div id='emotion_chart'></div>
 			</div>
 			<div id="controls">
-				<input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick="startVideo(){timedRedirect()}" id="startbutton"></input>
+				<input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick="timedRedirect(){startVideo()}" id="startbutton"></input>
 			</div>
 			
 			<script>
