--- a/examples/clm_emotiondetection.html
+++ b/examples/clm_emotiondetection.html
@@ -151,7 +151,7 @@
 				<div id='emotion_chart'></div>
 			</div>
 			<div id="controls">
-				<input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick="timedRedirect(){startVideo()}" id="startbutton"></input>
+				<input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick="startVideo()" id="startbutton"></input>
 			</div>
 			
 			<script>
@@ -172,7 +172,7 @@
 
 				function enablestart() {
 					var startbutton = document.getElementById('startbutton');
-					startbutton.value = "go";
+					startbutton.value = "start";
 					startbutton.disabled = null;
 				}
 
