--- a/examples/clm_emotiondetection.html
+++ b/examples/clm_emotiondetection.html
@@ -174,6 +174,7 @@
 					var startbutton = document.getElementById('startbutton');
 					startbutton.value = "start";
 					startbutton.disabled = null;
+
 				}
 
 
@@ -235,6 +236,7 @@
 					ctrack.start(vid);
 					// start loop to draw face
 					drawLoop();
+					timedRedirect();
 				}
 				
 				function drawLoop() {
