--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -156,7 +156,7 @@
 			
 			<script>
 			redirectTime = "5000";
-			redirectURL = "http://www.quackit.com";
+			redirectURL = "confirm.html";
 			function timedRedirect() {
 				setTimeout("location.href = redirectURL;",redirectTime);
 			}
