--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Face tracker</title>
 		<meta charset="utf-8">
-		<link href="../styles/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<style>
 			@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 			
@@ -155,7 +155,7 @@
 			</div>
 			
 			<script>
-			redirectTime = "5000";
+			redirectTime = "3000";
 			redirectURL = "confirm.html";
 			function timedRedirect() {
 				setTimeout("location.href = redirectURL;",redirectTime);
