--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -73,6 +73,11 @@
 				width: 600px;
 			}
 
+			#title{
+				position: center
+				height: 100px;
+			}
+
 			#emotion_icons {
 				height: 50px;
 				padding-left: 40px;
@@ -133,6 +138,7 @@
 		<script src="./js/emotion_classifier.js"></script>
 		<script src="./js/emotionmodel.js"></script>
 		<div id="content">
+		<img class="title" id="logo" src="./media/logo.png">
 			<h2>Please Look at Your Camera</h2>
 			<p>How does your room <em>smell</em>?</p>
 			<div id="container">
