--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Face tracker</title>
+		<title>Odoto</title>
 		<meta charset="utf-8">
 		<link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<style>
@@ -79,9 +79,9 @@
 				height: 100px;
 			}
 
-.title{
+.title img{
 				position: center
-				height: 100px;
+				height: 50px;
 			}
 			#emotion_icons {
 				height: 50px;
