--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -143,7 +143,7 @@
 		<script src="./js/emotion_classifier.js"></script>
 		<script src="./js/emotionmodel.js"></script>
 		<div id="content">
-		<img class="title" id="logo" src="./media/logo.png">
+		<img src="media/logo.png" height="50" align="center">
 			<h2>Please Look at Your Camera</h2>
 			<p>How does your room <em>smell</em>?</p>
 			<div id="container">
