--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -60,6 +60,10 @@
 				font-weight : 400;
 				text-align: center;
 			}
+			p {
+				font-weight : 400;
+				text-align: center;
+			}
 			
 			.btn {
 				font-family: 'Lato';
