--- a/examples/confirm.html
+++ b/examples/confirm.html
@@ -58,6 +58,11 @@
 			
 			h2 {
 				font-weight : 400;
+				text-align: center;
+			}
+			p {
+				font-weight : 400;
+				text-align: center;
 			}
 			
 			.btn {
@@ -113,6 +118,7 @@
 		<script src="./js/emotion_classifier.js"></script>
 		<script src="./js/emotionmodel.js"></script>
 		<div id="content">
+		<img src="media/logo.png" height="50" align="middle">
 			<h2>Thanks!</h2>
 			<p><a href = "odoto.html">Go back</a></p>
 		</div>
