--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -149,7 +149,7 @@
 		<div id="content">
 		<img src="media/logo.png" height="50" align="middle">
 			<h2>Please Look at Your Camera</h2>
-			<p>How does your room <em>smell</em>?</p>
+			<p>How do you <em>feel</em>?</p>
 			<div id="container">
 				<video id="videoel" width="400" height="300" preload="auto" loop>
 				</video>
