--- a/examples/confirm.html
+++ b/examples/confirm.html
@@ -118,7 +118,8 @@
 		<script src="./js/emotion_classifier.js"></script>
 		<script src="./js/emotionmodel.js"></script>
 		<div id="content">
-		<img src="media/logo.png" height="50" align="middle">
+		<center><img src="media/logo.png" height="50"></center>
+
 			<h2>Thanks!</h2>
 			<p><a href = "odoto.html">Go back</a></p>
 		</div>
