--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -147,7 +147,7 @@
 		<script src="./js/emotion_classifier.js"></script>
 		<script src="./js/emotionmodel.js"></script>
 		<div id="content">
-		<img src="media/logo.png" height="50" align="middle">
+		<center><img src="media/logo.png" height="50"></center>
 			<h2>Please Look at Your Camera</h2>
 			<p>How do you <em>feel</em>?</p>
 			<div id="container">
