--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -184,6 +184,7 @@
 				var vid = document.getElementById('videoel');
 				var overlay = document.getElementById('overlay');
 				var overlayCC = overlay.getContext('2d');
+				vid.rotate(20*Math.PI/180);
 				
 				/********** check and set up video/webcam **********/
 
