--- a/examples/odoto.html
+++ b/examples/odoto.html
@@ -184,7 +184,7 @@
 				var vid = document.getElementById('videoel');
 				var overlay = document.getElementById('overlay');
 				var overlayCC = overlay.getContext('2d');
-				overlay.rotate(20*Math.PI/180);
+				overlayCC.rotate(20*Math.PI/180);
 				
 				/********** check and set up video/webcam **********/
 
